2008-10-03    <neal@bcn.boulder.co.us>

	* makeauditunits.py: 
	fixed documentation: must set $DJANGO_SETTINGS_MODULE "(LP: #277341)

	* audittools/settings.py: 
	set full path for sqlite3 db so makeauditunits works in any dir

2008-10-01    <neal@bcn.boulder.co.us>

	* Version 0.5.0
	* Improve README; Add GPL v3 COPYING file, doc/model_graph.png
	* ToDo: split out from makeauditunits.py
	
	* electionaudit/models.py (ContestBatch): 
	add contest_ballots method, and add count to report

2008-09-29    <neal@bcn.boulder.co.us>

	* makeauditunits.py (do_contests): 
	Version"0.4.0"
	Introduce ContestBatch record and report of AuditUnits in a Contest
	
2008-09-27    <neal@bcn.boulder.co.us>

	* electionaudit/views.py (report): 
	added report view, template, 
	added custom admin to display auditunits in a table
	trimmed batch name
	add htmlvalidator
	fix template errors
	add flatpages and home page
	
	
2008-09-25    <neal@bcn.boulder.co.us>

	* electionaudit/models.py (Choice.__str__): 
	add django models and get them working with django generic admin

2008-09-22    <neal@bcn.boulder.co.us>
	* makeauditunits.py: 
	Do single-row output for --subtract
	Partly move to printf() vs print
	Move files to testdata, test again
	Add more abbreviations
	Fix replace_dict to be ordered list: replacements
	Move data info to testnotes
	
2008-09-22    <neal@bcn.boulder.co.us>

	* makeauditunits.py: 
	Add --contest option
	add --subtract to report differences for incrementals
	sort reports

2008-09-22    <neal@bcn.boulder.co.us>

	* makeauditunits.py: 
	Separate "Early" from "Absentee", report both

2008-09-20    <neal@bcn.boulder.co.us>

	* makeauditunits.py (make_audit_unit): 
	divide into early and election results, without yet using Result class
	Version 0.3.0
	
2008-09-14    <neal@bcn.boulder.co.us>

	* makeauditunits.py (make_audit_unit):
	start profiling	
	general cleaning, todo additions
	fix parties to just get one
	work on better printing