@@ -1,0 +1,12 @@
+{% extends "base.html" %}
+
+{% block title %}ElectionAudits Reports{% endblock %}
+
+{% block content %}
+<ul>
+<li><a href="reports/">Audit reports</a></li>
+<li><a href="contests/">Contests</a></li>
+<li><a href="votecounts/">Vote Counts</a></li>
+<li><a href="databrowse/">Browse all data</a></li>
+</ul>
+{% endblock %}
